# web_app

./: .env  Cargo.toml  DYLD.txt  Dockerfile  build.rs  config.yml  docker-compose.yml  state.json
css/: base.css  main.css
javascript/: main.js
migrations/2024-03-14-135022_create_to_do_items/: up.sql
migrations/2024-03-25-134628_create_users/: up.sql
scripts/: run_test_pipeline.sh  todo.postman_collection.json
src/: config.rs  counter.rs  database.rs  jwt.rs  main.rs  processes.rs  schema.rs  state.rs
src/json_serialization/: login_response.rs  mod.rs  new_user.rs  to_do_item.rs  to_do_items.rs
src/models/: mod.rs
src/models/item/: item.rs  mod.rs  new_item.rs
src/models/user/: mod.rs  new_user.rs  user.rs
src/to_do/: enums.rs  mod.rs
src/to_do/structs/: base.rs  done.rs  pending.rs
src/to_do/traits/: create.rs  delete.rs  edit.rs  get.rs
src/views/: mod.rs
src/views/app/: content_loader.rs  items.rs  mod.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
src/views/users/: create.rs  mod.rs
templates/: main.html
templates/components/: header.css  header.html
