[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.aarch64-apple-darwin]
rustflags = '-L /opt/homebrew/opt/libpq/lib -L /usr/local/bin/psql'

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.6.5"
serde_json = "1.0.114"
serde = { version="1.0.197", features = ["derive"]}
actix-service = "2.0.2"
futures = "0.3.30"
diesel = { version = "1.4.8", features = ["postgres", 'chrono', 'r2d2']}
dotenv = "0.15.0"
chrono = {version="0.4.34", features = ["serde"]}
jsonwebtoken = "9.2.0"
serde_yaml = "0.8.23"
lazy_static = "1.4.0"
bcrypt = "0.15.0"
uuid = {version="1.0.0", features=["serde", "v4"]}
